added fix for responsive calendar

--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
               <div class="col-md-4">
                 <blockquote class="stats red">
                   <p>2400</p>
-                  <p>Online Players</p>
+                  <p>New Vists</p>
                 </blockquote>
               </div>
               <div class="col-md-4 ">
                 <blockquote class="stats green">
                   <p>9801</p>
-                  <p>New Tournaments</p>
+                  <p>Signed up</p>
                 </blockquote>
               </div>
               <div class="col-md-4">
                 <blockquote class="stats red">
                   <p>1890</p>
-                  <p>Hours Played</p>
+                  <p>Reviewed</p>
                 </blockquote>
               </div>
             </div>
@@ -160,7 +160,11 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
+    <br />
+    <br />
+    <br />
+
+    <!-- JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
