added fork me btn

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <style id="holderjs-style" type="text/css"></style></head>
 
   <body cz-shortcut-listen="true" style="">
+
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -172,5 +173,6 @@
     <script src="js/dashboard.js"></script>
     <script src="libs/fullcalendar/moment.js"></script>
     <script src="libs/fullcalendar/fullcalendar.js"></script>
+    <a href="https://github.com/metaware/responsive_bootsrap_admin_theme"><img style="position: fixed; top: 70; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
 </body></html>
